--- a/subscription-page/index.html
+++ b/subscription-page/index.html
@@ -29,7 +29,22 @@
     <div>
         <div class="header"></div>
         <div class="front-image">
-            <p>Testing</p>
+            <div class="sub-text">
+                <h2>Subscribe to our NHL recap newsletter</h2>
+            </div>
+            <div class="sub-form">
+                <form method="POST">
+                    <div class="form-row">
+                        <div class="col-12 col-md-9 mb-2 mb-md-0">
+                            <input type="email" class="form-control form-control-lg" name="email" placeholder="Enter your email...">
+                         </div>
+                         <div class="col-12 col-md-3">
+                            <input type="submit" id="submit">
+                         </div>
+                    </div>
+                </form>
+            </div>
+            
         </div>
 
     </div>
