front page updates

--- a/subscription-page/index.html
+++ b/subscription-page/index.html
@@ -6,6 +6,11 @@
     
     <title>NHL-video-recaps</title>
 </head>
+
+{% block css %}
+
+{% endblock %}
+
 <body>
     
     <nav>
@@ -33,13 +38,13 @@
                 <h2>Subscribe to our NHL recap newsletter</h2>
             </div>
             <div class="sub-form">
-                <form method="POST">
+                <form action="#" method="post">
                     <div class="form-row">
                         <div class="col-12 col-md-9 mb-2 mb-md-0">
                             <input type="email" class="form-control form-control-lg" name="email" placeholder="Enter your email...">
                          </div>
                          <div class="col-12 col-md-3">
-                            <input type="submit" id="submit">
+                            <input type="submit" class="btn btn-block btn-lg btn-primary" id="submit" value="Submit">
                          </div>
                     </div>
                 </form>
